Make fields private. Format assertions.